do not upstream: local config for windows

--- a/etc/astrometry.cfg
+++ b/etc/astrometry.cfg
@@ -26,7 +26,8 @@ inparallel
 cpulimit 300
 
 # In which directories should we search for indices?
-add_path /Users/dstn/astrometry/data
+#add_path /home/jason/astrometry_data
+add_path /mnt/d/astrometry_data/5000
 
 # Load any indices found in the directories listed above.
 autoindex
